Update Decision Tree Demo.ipynb

--- a/Decision Tree Demo.ipynb
+++ b/Decision Tree Demo.ipynb
@@ -5,7 +5,7 @@
    "id": "52da94ad-c938-4372-9098-30ff69864be1",
    "metadata": {},
    "source": [
-    "## Submission Demonstration for DISH Network Takehome June 2022"
+    "## Simple Decision Tree Demo"
    ]
   },
   {
